--- a/laivanupotus/pom.xml
+++ b/laivanupotus/pom.xml
@@ -39,6 +39,16 @@
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
                 <version>0.30</version>
+                <configuration>
+                    <targetClasses>
+                        <param>com.antero.laivanupotus.logiikka.*</param>
+                        <param>com.antero.laivanupotus.domain.*</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>com.antero.laivanupotus.logiikka.*</param>
+                        <param>com.antero.laivanupotus.domain.*</param>
+                    </targetTests>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
